# oop-mai-lab7

./: README.md
lab7/: CMakeLists.txt
lab7/include/: combat_visitor.hpp  dungeon.hpp  factory.hpp  npc.hpp  npc_types.hpp  observer.hpp
lab7/src/: combat_visitor.cpp  dungeon.cpp  event_manager.cpp  factory.cpp  main.cpp  npc.cpp  npc_types.cpp
lab7/tests/: test_main.cpp
